fix tests and add token based auth
