# post-service/api/comment.go
@@ -3,28 +3,36 @@ package api
 import (
 	"net/http"
 
+	"github.com/chrishrb/blog-microservice/internal/api_utils"
+	"github.com/chrishrb/blog-microservice/internal/auth"
 	"github.com/chrishrb/blog-microservice/post-service/store"
 	"github.com/go-chi/render"
 	"github.com/google/uuid"
 )
 
-func (s *Server) CreateComment(w http.ResponseWriter, r *http.Request, postId string) {
-	req := new(CommentCreate)
-	if err := render.Bind(r, req); err != nil {
-		_ = render.Render(w, r, ErrInvalidRequest(err))
+func (s *Server) CreateComment(w http.ResponseWriter, r *http.Request, postId uuid.UUID) {
+	userID, err := auth.GetUserIDFromContext(r.Context())
+	if err != nil {
+		_ = render.Render(w, r, api_utils.ErrInternalError(err))
 		return
 	}
 
-	ID := uuid.New().String()
+	req := new(CommentCreate)
+	if err := render.Bind(r, req); err != nil {
+		_ = render.Render(w, r, api_utils.ErrInvalidRequest(err))
+		return
+	}
+
+	ID := uuid.New()
 	comment := &store.Comment{
 		ID:       ID,
-		AuthorID: req.AuthorId,
+		AuthorID: userID,
 		PostID:   postId,
 		Content:  req.Content,
 	}
-	err := s.engine.SetComment(r.Context(), comment)
+	err = s.engine.SetComment(r.Context(), comment)
 	if err != nil {
-		_ = render.Render(w, r, ErrInternalError(err))
+		_ = render.Render(w, r, api_utils.ErrInternalError(err))
 		return
 	}
 
@@ -36,12 +44,12 @@ func (s *Server) CreateComment(w http.ResponseWriter, r *http.Request, postId st
 	})
 }
 
-func (s *Server) ListComments(w http.ResponseWriter, r *http.Request, postId string, params ListCommentsParams) {
-	offset, limit := getPaginationWithDefaults(params.Offset, params.Limit)
+func (s *Server) ListComments(w http.ResponseWriter, r *http.Request, postId uuid.UUID, params ListCommentsParams) {
+	offset, limit := api_utils.GetPaginationWithDefaults(params.Offset, params.Limit)
 
 	comment, err := s.engine.ListCommentsByPostID(r.Context(), postId, offset, limit)
 	if err != nil {
-		_ = render.Render(w, r, ErrInternalError(err))
+		_ = render.Render(w, r, api_utils.ErrInternalError(err))
 		return
 	}
 
@@ -57,14 +65,14 @@ func (s *Server) ListComments(w http.ResponseWriter, r *http.Request, postId str
 	render.RenderList(w, r, comments)
 }
 
-func (s *Server) LookupComment(w http.ResponseWriter, r *http.Request, postId, id string) {
+func (s *Server) LookupComment(w http.ResponseWriter, r *http.Request, postId, id uuid.UUID) {
 	comment, err := s.engine.LookupComment(r.Context(), postId, id)
 	if err != nil {
-		_ = render.Render(w, r, ErrInternalError(err))
+		_ = render.Render(w, r, api_utils.ErrInternalError(err))
 		return
 	}
 	if comment == nil {
-		_ = render.Render(w, r, ErrNotFound)
+		_ = render.Render(w, r, api_utils.ErrNotFound)
 		return
 	}
 
@@ -75,35 +83,32 @@ func (s *Server) LookupComment(w http.ResponseWriter, r *http.Request, postId, i
 	})
 }
 
-func (s *Server) UpdateComment(w http.ResponseWriter, r *http.Request, postId, id string) {
+func (s *Server) UpdateComment(w http.ResponseWriter, r *http.Request, postId, id uuid.UUID) {
 	// Check if the comment exists
 	comment, err := s.engine.LookupComment(r.Context(), postId, id)
 	if err != nil {
-		_ = render.Render(w, r, ErrInternalError(err))
+		_ = render.Render(w, r, api_utils.ErrInternalError(err))
 		return
 	}
 	if comment == nil {
-		_ = render.Render(w, r, ErrNotFound)
+		_ = render.Render(w, r, api_utils.ErrNotFound)
 		return
 	}
 
 	// Afterwards update the comment
 	req := new(CommentUpdate)
 	if err := render.Bind(r, req); err != nil {
-		_ = render.Render(w, r, ErrInvalidRequest(err))
+		_ = render.Render(w, r, api_utils.ErrInvalidRequest(err))
 		return
 	}
 
-	if req.AuthorId != nil {
-		comment.AuthorID = *req.AuthorId
-	}
 	if req.Content != nil {
 		comment.Content = *req.Content
 	}
 
 	err = s.engine.SetComment(r.Context(), comment)
 	if err != nil {
-		_ = render.Render(w, r, ErrInternalError(err))
+		_ = render.Render(w, r, api_utils.ErrInternalError(err))
 		return
 	}
 
@@ -114,10 +119,10 @@ func (s *Server) UpdateComment(w http.ResponseWriter, r *http.Request, postId, i
 	})
 }
 
-func (s *Server) DeleteComment(w http.ResponseWriter, r *http.Request, postId, id string) {
+func (s *Server) DeleteComment(w http.ResponseWriter, r *http.Request, postId, id uuid.UUID) {
 	err := s.engine.DeleteComment(r.Context(), postId, id)
 	if err != nil {
-		_ = render.Render(w, r, ErrInternalError(err))
+		_ = render.Render(w, r, api_utils.ErrInternalError(err))
 		return
 	}
 	w.WriteHeader(http.StatusNoContent)
